--- a/client/3c-react-no-api/package.json
+++ b/client/3c-react-no-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "0c-react-mt",
+  "name": "3c-react-no-api",
   "version": "0.01.010",
   "private": true,
   "dependencies": {
@@ -8,8 +8,8 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "set PORT=50010 && ..\\node_modules\\.bin\\react-scripts  start",
-    "start-unix": "PORT=50010 ../node_modules/.bin/react-scripts  start",
+    "start": "set PORT=50013 && ..\\node_modules\\.bin\\react-scripts  start",
+    "start-unix": "PORT=50013 ../node_modules/.bin/react-scripts  start",
     "eject": "..\\node_modules\\.bin\\react-scripts  eject",
     "build": "..\\node_modules\\.bin\\react-scripts  build",
     "test": "..\\node_modules\\.bin\\react-scripts  test"
