--- a/client/1c-react-empty/package.json
+++ b/client/1c-react-empty/package.json
@@ -3,9 +3,6 @@
   "version": "0.01.010",
   "private": true,
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.3",
-    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "set PORT=50010 && ..\\node_modules\\.bin\\react-scripts  start",
@@ -13,7 +10,7 @@
     "eject": "..\\node_modules\\.bin\\react-scripts  eject",
     "build": "..\\node_modules\\.bin\\react-scripts  build",
     "test": "..\\node_modules\\.bin\\react-scripts  test",
-    "prod": "server build/index.html"
+    "prod": "serve -l 60010  -s build"
   },
   "eslintConfig": {
     "extends": [
