--- a/client/3c-react-no-api/package.json
+++ b/client/3c-react-no-api/package.json
@@ -3,16 +3,14 @@
   "version": "0.01.010",
   "private": true,
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.3",
-    "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "set PORT=50013 && ..\\node_modules\\.bin\\react-scripts  start",
-    "start-unix": "PORT=50013 ../node_modules/.bin/react-scripts  start",
+    "start": "set PORT=50163 && ..\\node_modules\\.bin\\react-scripts  start",
+    "start-unix": "PORT=50163 ../node_modules/.bin/react-scripts  start",
     "eject": "..\\node_modules\\.bin\\react-scripts  eject",
     "build": "..\\node_modules\\.bin\\react-scripts  build",
-    "test": "..\\node_modules\\.bin\\react-scripts  test"
+    "test": "..\\node_modules\\.bin\\react-scripts  test",
+    "prod": "serve -l 60163  -s build"
   },
   "eslintConfig": {
     "extends": [
