--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-router-dom": "6.0",
     "history": "5.0"
+  },
+  "devdependencies": {
+    "react-scripts": "4.0.3",
   },
   "scripts": {
     "start": "echo npm ERROR: * You must be in an app folder to start app",
