More package.json changes

--- a/client/1c-react-empty/package.json
+++ b/client/1c-react-empty/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "0c-react-mt",
+  "name": "1c-react-empty",
   "version": "0.01.010",
-  "private": true,
+  "author": "8020data",
+  "license": "ISC",
   "dependencies": {
   },
   "scripts": {
