--- a/client/3c-react-no-api/package.json
+++ b/client/3c-react-no-api/package.json
@@ -1,7 +1,8 @@
 {
   "name": "3c-react-no-api",
   "version": "0.01.010",
-  "private": true,
+  "author": "8020data",
+  "license": "ISC",
   "dependencies": {
   },
   "scripts": {
