--- a/client/4c-react-wi-api/package.json
+++ b/client/4c-react-wi-api/package.json
@@ -1,7 +1,8 @@
 {
   "name": "4c-react-wi-api",
   "version": "0.01.010",
-  "private": true,
+  "author": "8020data",
+  "license": "ISC",
   "dependencies": {
   },
   "scripts": {
