--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,9 @@
 {
   "name": "simple-react-apps",
+  "description": "Installs client modules for developing apps with React",
   "version": "0.01.010",
-  "private": true,
+  "author": "8020data",
+  "license": "ISC",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -9,7 +11,7 @@
     "history": "5.0"
   },
   "devdependencies": {
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "echo npm ERROR: * You must be in an app folder to start app",
