Fix spelling of devDependencies

--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "react-router-dom": "6.0",
     "history": "5.0"
   },
-  "devdependencies": {
+  "devDependencies": {
     "react-scripts": "4.0.3"
   },
   "scripts": {
