Updated package.json, .env & README files

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-react-apps",
+  "name": "first-react-apps",
   "description": "Installs client modules for developing apps with React",
   "version": "0.01.010",
   "author": "8020data",
